<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <View
            android:background="@color/colorMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDoneFont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="བསྒྲུབས་ཚར།"
                android:textColor="@color/colorButton"
                />

        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/rlly_f1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <TextView
            android:id="@+id/tvFont1"
            android:paddingTop="10dp"
            android:paddingLeft="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kFont1"/>
        <ImageView
            android:id="@+id/imgCheck1"
            android:paddingTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checker"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlly_f2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <TextView
            android:id="@+id/tvFont2"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kFont2"/>

        <ImageView
            android:id="@+id/imgCheck2"
            android:paddingTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checker"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlly_f3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <TextView
            android:id="@+id/tvFont3"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/kFont3"/>
        <ImageView
            android:id="@+id/imgCheck3"
            android:paddingTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checker"/>
    </RelativeLayout>


</LinearLayout>