<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/lnMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/frly_1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorMain">

            <ImageView
                android:id="@+id/imageButton2"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/logotibetan"
                android:scaleX="1.3"

                />

            <TextView
                android:id="@+id/txtChapterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""/>

            <RelativeLayout
                android:id="@+id/rlTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btChapter"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:text="@string/kTitle"
                    android:textSize="12dp"
                    android:textColor="@color/colorBLACK" />

            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/frly_new"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <RelativeLayout
                android:background="@color/colorMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/logo1"
                    android:textSize="10dp"
                    android:textColor="@color/colorBLACK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="གཞུང་པོད་འདེམ་རོགས།"
                     />

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:background="@null"
                    android:src="@drawable/search_icon"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="WebViewLayout">

            <WebView
                android:id="@+id/webView"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:clickable="false"
                android:layout_height="match_parent">
            </WebView>

            <View
                android:id="@+id/viewOpacity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBLACK"
                android:alpha="0.5"
                />
            <LinearLayout
                android:id="@+id/lnFontSize"
                android:layout_centerInParent="true"
                android:background="@color/colorWhite"
                android:layout_alignParentBottom="true"
                android:layout_width="250dp"
                android:layout_height="260dp"
                android:orientation="vertical">
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="ཡི་གེའི་ཆེ་ཆུང་།"
                    android:textColor="@color/colorBLACK"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/tvExSmall"
                    android:layout_margin="10dp"
                    android:text="@string/kExtraSmall"
                    android:textSize="12sp"
                    android:textColor="@color/colorBLACK"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/tvSmall"
                    android:layout_margin="10dp"
                    android:text="@string/kSmall"
                    android:textSize="14sp"
                    android:textColor="@color/colorBLACK"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/tvMedium"
                    android:layout_margin="10dp"
                    android:text="@string/kMedium"
                    android:textSize="16sp"
                    android:textColor="@color/colorBLACK"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/tvLarge"
                    android:layout_margin="10dp"
                    android:text="@string/kLarge"
                    android:textSize="20sp"
                    android:textColor="@color/colorBLACK"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/tvExLarge"
                    android:layout_margin="10dp"
                    android:text="@string/kExtraLarge"
                    android:textSize="22sp"
                    android:textColor="@color/colorBLACK"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/frly_2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/colorMain"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btLeft"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    tools:ignore="ContentDescription"
                    android:background="@null"
                    android:layout_marginLeft="5dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/user" />
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/btPrevious"
                        android:text="@string/kPrevious"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textColor="@color/colorButton"
                        android:background="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/btNext"
                        android:text="@string/kNext"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textColor="@color/colorButton"
                        android:background="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/btnChangeFontSize"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:text="ཡི་གེའི་ཆེ་ཆུང་།"
                        android:textColor="@color/colorButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/imgSettings"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="0dp"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/setting_icon"
                    />
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rlMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/id_opacityview"
            android:background="@color/colorBLACK"
            android:alpha="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:background="@drawable/background_border"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/id_highligh"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/highligh"/>
                <ImageView
                    android:id="@+id/id_favourites"
                    android:layout_weight="1"
                    android:layout_marginLeft="80dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/favorites"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/id_share"
                android:layout_weight="1"
                android:layout_marginLeft="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sharetext"
                />
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/id_note"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/note"/>
                <ImageView
                    android:id="@+id/id_copy"
                    android:layout_weight="1"
                    android:layout_marginLeft="80dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/copy"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/id_opacityviewNote"
            android:background="@color/colorBLACK"
            android:alpha="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:background="@drawable/background_border"
            android:id="@+id/relativeLayout">
            <View
                android:id="@+id/viewnote"
                android:background="@drawable/bg_border_black"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <TextView
                android:text="ཐོ་གསུབ།"
                android:id="@+id/cancelNote"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorButton"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="Title"
                android:id="@+id/titlenote"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/donenote"
                android:text="བསྒྲུབས་ཚར།"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorButton"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edtNote"
                android:textSize="14sp"
                android:layout_below="@+id/viewnote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

        </RelativeLayout>
    </RelativeLayout>
    <ProgressBar
        android:indeterminate="true"
        android:id="@+id/marker_progress"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorMain"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    <SeekBar
        android:id="@+id/seekBar"
        android:max="4"
        android:progress="2"
        android:progressBackgroundTint="@color/colorBLACK"
        android:progressTint="@color/colorMain"
        android:thumbTint="@color/colorMain"
        android:layout_alignParentBottom="true"
        android:layout_width="100dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"/>
</RelativeLayout>