<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <View
            android:background="@color/colorMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="སྒེར་དོན་འདེམ་རོགས།"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvDonePersonal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="བསྒྲུབས་ཚར།"
                android:gravity="center"
                android:textColor="@color/colorButton"
                />

        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/rlly_p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="20dp"
                android:paddingTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/note"/>
            <TextView
                android:paddingTop="10dp"
                android:paddingLeft="14dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kP1"/>
        </LinearLayout>

        <ImageView
            android:paddingTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlly_p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView

                android:layout_marginLeft="20dp"
                android:paddingTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorites"/>
            <TextView

                android:paddingTop="10dp"
                android:paddingLeft="14dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kP2"/>
        </LinearLayout>

        <ImageView

            android:paddingTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlly_p3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView

                android:layout_marginLeft="20dp"
                android:paddingTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/highligh"/>
            <TextView

                android:paddingTop="10dp"
                android:paddingLeft="14dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kP3"/>
        </LinearLayout>

        <ImageView

            android:paddingTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"/>
    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:id="@+id/rlly_p4"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:paddingTop="10dp"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:paddingRight="10dp"-->
        <!--&gt;-->
        <!--<LinearLayout-->
            <!--android:id="@+id/ln4"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<ImageView-->
                <!--android:paddingTop="10dp"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/history"/>-->
            <!--<TextView-->
                <!--android:paddingTop="10dp"-->
                <!--android:paddingLeft="14dp"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/kP4"/>-->
        <!--</LinearLayout>-->

        <!--<ImageView-->

            <!--android:paddingTop="40dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:paddingRight="20dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/right_arrow"/>-->
    <!--</RelativeLayout>-->

</LinearLayout>